# HastenedARMDeepLearning

./: LICENSE  README.md
examples/dlib_examples/: CMakeLists.txt  andrej_example.cpp  andrej_test.cpp  convolution_layer.cpp  small_neural_network.cpp
examples/example1/: Makefile  example1  example1.cpp
examples/get_info/: Makefile  get_info.cpp
examples/le_net/: Makefile  le_net.cpp
examples/le_net/assets/: kernels.cl
examples/multiply_optimisation/: Makefile  multiply_optimisation  multiply_optimisation.cpp
examples/multiply_optimisation/assets/: multiply.cl
examples/queuing/: Makefile  queuing
examples/small_neural_network/: Makefile  small_neural_network.cpp
examples/small_neural_network/assets/: kernels.cl
